What this / collapse fix
What this / collapse fix

--- a/ConfigRequestQuestionApp/ConfigRequestQuestionApp/Custom_Scripts/Styles/Custom/Core/main.css
+++ b/ConfigRequestQuestionApp/ConfigRequestQuestionApp/Custom_Scripts/Styles/Custom/Core/main.css
@@ -270,9 +270,9 @@ form.manage-build-form {
 .question-slide-out {
     opacity: 0;
     position: absolute;
-    right: -15px;
     top: 0;
     left: calc(100% + 15px);
+    width: calc(60% + 15px);
     height: 100%;
     background-color: #fff;
     border-top: 3px solid #007bff;
@@ -304,7 +304,6 @@ form.manage-build-form {
 }
 
 .question-slide-out.q-show {
-    right: -15px;
     left: 40%;
     transition: 0.5s;
     transition-timing-function: ease-in-out;
@@ -347,4 +346,43 @@ form.manage-build-form {
     -moz-transform: rotate(270deg);
     -o-transform: rotate(270deg);
     writing-mode: lr-tb;
+}
+
+
+div#q-editor-head {
+    height: 10%;
+    background-color: #ffc107;
+    color: #212529;
+    position: relative;
+    width: 100%;
+    border-top-left-radius: 10px;
+}
+
+#q-editor-head h1 {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    top: 5px;
+    /* display: inline; */
+}
+
+button#question-text-go-back {
+    position: absolute;
+    z-index: 500;
+    top: 20%;
+    left: 3%;
+    width: 20%;
+    height: 60%;
+}
+
+div#q-editor-container {
+    height: 90%;
+    padding: 0;
+    margin: 0;
+}
+
+div#q-editor-inner {
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
